syntax = "proto3";

package chora.validator.v1;

import "cosmos/msg/v1/msg.proto";

option go_package = "github.com/choraio/mods/validator/types/v1";

// Msg is the Msg service.
service Msg {

  // AddValidator adds a validator (restricted to authority).
  rpc AddValidator(MsgAddValidator) returns (MsgAddValidatorResponse);

  // RemoveValidator removes a validator (restricted to authority).
  rpc RemoveValidator(MsgRemoveValidator) returns (MsgRemoveValidatorResponse);

  // UpdateMaxMissedBlocks updates the maximum number of missed blocks before a
  // validator is removed from the validator set. (restricted to authority).
  rpc UpdateMaxMissedBlocks(MsgUpdateMaxMissedBlocks)
      returns (MsgUpdateMaxMissedBlocksResponse);

  // UpdateValidator updates a validator (restricted to validator).
  rpc UpdateValidator(MsgUpdateValidator) returns (MsgUpdateValidatorResponse);
}

// MsgAddValidator is the Msg/AddValidator request type.
message MsgAddValidator {
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address of the authority.
  string authority = 1;

  // address is the address of the validator.
  string address = 2;

  // metadata is the metadata of the validator.
  string metadata = 3;
}

// MsgAddValidatorResponse is the Msg/AddValidator response type.
message MsgAddValidatorResponse {

  // address is the address of the validator.
  string address = 1;
}

// MsgRemoveValidator is the Msg/RemoveValidator request type.
message MsgRemoveValidator {
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address of the authority.
  string authority = 1;

  // address is the address of the validator.
  string address = 2;
}

// MsgRemoveValidatorResponse is the Msg/RemoveValidator response type.
message MsgRemoveValidatorResponse {

  // address is the address of the validator.
  string address = 1;
}

// MsgUpdateMaxMissedBlocks is the Msg/UpdateMaxMissedBlocks request type.
message MsgUpdateMaxMissedBlocks {
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address of the authority.
  string authority = 1;

  // max_missed_blocks is the maximum number of missed blocks before a validator
  // is removed from the validator set. A zero-value indicates no maximum.
  int64 max_missed_blocks = 2;
}

// MsgUpdateMaxMissedBlocksResponse is the Msg/UpdateMaxMissedBlocks response
// type.
message MsgUpdateMaxMissedBlocksResponse {

  // max_missed_blocks is the maximum number of missed blocks before a validator
  // is removed from the validator set. A zero-value indicates no maximum.
  int64 max_missed_blocks = 1;
}

// MsgUpdateValidator is the Msg/UpdateValidator request type.
message MsgUpdateValidator {
  option (cosmos.msg.v1.signer) = "address";

  // address is the address of the validator.
  string address = 1;

  // new_metadata is the new metadata of the validator.
  string new_metadata = 2;
}

// MsgUpdateValidatorResponse is the Msg/UpdateValidator response type.
message MsgUpdateValidatorResponse {

  // address is the address of the validator.
  string address = 1;
}
